--- a/main.html
+++ b/main.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
     <meta charset="utf-8">
     <title>지도 생성하기</title>
     
 </head>
 <body>
+    <form class="search">
+        <label>원하는 지역:</label>
+        <input type="text">
+        <button type="submit">검색</button>
+    </form>
 <!-- 지도를 표시할 div 입니다 -->
 <div id="map" style="width:100%;height:350px;"></div>
 
