--- a/index.html
+++ b/index.html
@@ -10,31 +10,33 @@
 
 
 <body>
+<div class="container">
 <h1>지역별 인기 지역 찾기</h1>
-    <div class="container">
-        <div>지역 : <input type="text" id="region" value=""></div>
-        <button type="button" onclick="search();">검색</button>
-    </div>
+<div class="search">
+    <input type="text" id="region" value="" placeholder="지역 입력">
+</div>
+<div>
+    <table>
+        <thead>
+            <tr>
+                <th style="width: 20%">순위</th>
+                <th>이름</th>
+                <th style="width: 20%">퍼센트</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>수성못</td>
+                <td>45%</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 
-<table>
-    <thead>
-        <tr>
-            <td>순위</td>
-            <td>이름</td>
-            <td>퍼센트</td>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>1</td>
-            <td>수성못</td>
-            <td>45%</td>
-        </tr>
-    </tbody>
-</table>
+<div id="map"></div>
 
-<div id="map" style="width:100%;height:350px;"></div>
-
+</div>
 
 <script type="text/javascript"
     src="//dapi.kakao.com/v2/maps/sdk.js?appkey=b257a2a39663828b84d6fb3f1018996a"></script>
