--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="container">
 <h1>지역별 인기 지역 찾기</h1>
 <div class="search">
-    <input type="text" id="region" value="" placeholder="지역 입력">
+    <input type="text" id="region" placeholder="지역 입력" onkeypress="show_result()">
 </div>
 <div>
     <table>
@@ -45,11 +45,11 @@
     crossorigin="anonymous"></script>
 
 <script>
-    function search(){
-        let reg = document.getElementById("region").value
-        alert(reg);
-    }
 
+function show_result(){
+    let reg = document.getElementById("region").value;
+    alert(reg);
+}
 var mapContainer = document.getElementById('map'), 
 mapOption = { 
     center: new kakao.maps.LatLng(33.450701, 126.570667),
@@ -59,5 +59,6 @@ mapOption = {
 var map = new kakao.maps.Map(mapContainer, mapOption); 
 
 </script>
+
 </body>
 </html>
