--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <div class="container">
-<h1>지역별 인기 지역 찾기</h1>
+<h1>지역별 핫플 찾기</h1>
 <div class="search">
     <input type="text" id="region" placeholder="지역 입력" onkeypress="show_result()">
 </div>
