--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 <body>
 <div>
 <h1 onclick="window.location.reload()" style="cursor: pointer;">지역별 핫플 찾기</h1>
-<form class="search" action="daegu-result.html" method="get">
+<form class="search" action="daegu-result.html" method="get" style="margin: 50px;">
     <input type="text" id="region" placeholder="지역 입력" name="q">
 </form>
 </div>
