--- a/daegu-result.html
+++ b/daegu-result.html
@@ -46,9 +46,10 @@
         </tbody>
     </table>
 </div>
+</div>
 
 <div class="right">
-    <div id="map" style="display: ;"></div>
+    <div id="map""></div>
 </div>
 
 </div>
